# ndicapi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ndicapi.cxx  ndicapi.h  ndicapiConfig.cmake.in  ndicapiConfigVersion.cmake.in  ndicapiExport.h.in  ndicapi_math.cxx  ndicapi_math.h  ndicapi_serial.cxx  ndicapi_serial.h  ndicapi_serial_apple.cxx  ndicapi_serial_unix.cxx  ndicapi_serial_win32.cxx  ndicapi_socket.h  ndicapi_socket_apple.cxx  ndicapi_socket_unix.cxx  ndicapi_socket_win32.cxx  ndicapi_thread.cxx  ndicapi_thread.h  ndicapimodule.cxx  setup.py  setup.py.in
Applications/: ndiBasicExample.cxx  ndiBasicExample.py  ndiPolarisMeasure.py
docs/: ndicapi.dox
include/: ndicapi.h  ndicapi_serial.h  ndicapi_thread.h
source/: ndicapi.cxx  ndicapi_serial.cxx  ndicapi_serial_win32.cxx  ndicapi_socket.cxx  ndicapi_socket_apple.cxx  ndicapi_socket_unix.cxx  ndicapi_socket_win32.cxx  ndicapimodule.cxx
